<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp" >

        <TextView
            android:id="@+id/numberToCall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textColor="#fff" >

            <requestFocus />
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="2dp"
            android:layout_marginTop="64dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:weightSum="3"
            android:layout_marginRight="2dp"
            android:layout_below="@+id/linearLayout1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt4" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt5" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginRight="2dp"

            android:orientation="horizontal" >

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt9" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginRight="2dp"

            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonAst"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt_ast" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt0" />

            <Button
                android:id="@+id/buttonSus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="#fff"
                android:text="@string/dialer_btt_sus" />
        </LinearLayout>

        <LinearLayout
             android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_below="@+id/linearLayout4"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonCobrar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginRight="2dp"
                android:background="#fff"
                android:text="Cobrar" />

            <ImageButton
                android:id="@+id/buttonCall"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginRight="2dp"
                android:background="#fff"
                android:scaleType="center"
                android:src="@drawable/dial_icon" />

            <ImageButton
                android:id="@+id/buttonUndo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:background="#fff"
                android:scaleType="fitXY"
                android:src="@drawable/undo" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>